--- a/live-profile-server-backend/static/swagger-ui/index.html
+++ b/live-profile-server-backend/static/swagger-ui/index.html
@@ -35,7 +35,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://fitclubs.teaspotstudio.ru/api/swagger.json";
+        url = "http://liveprofile.teaspotstudio.ru/swagger.json";
       }
 
       // Pre load translate...
