--- a/live-profile-server-backend/static/swagger-ui/index.html
+++ b/live-profile-server-backend/static/swagger-ui/index.html
@@ -4,25 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Swagger UI</title>
-  <link rel="icon" type="image/png" href="./images/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="./images/favicon-16x16.png" sizes="16x16" />
-  <link href='./css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='./css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='./css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='./css/reset.css' media='print' rel='stylesheet' type='text/css'/>
-  <link href='./css/print.css' media='print' rel='stylesheet' type='text/css'/>
-  <script src='./lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-  <script src='./lib/jquery.slideto.min.js' type='text/javascript'></script>
-  <script src='./lib/jquery.wiggle.min.js' type='text/javascript'></script>
-  <script src='./lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-  <script src='./lib/handlebars-2.0.0.js' type='text/javascript'></script>
-  <script src='./lib/underscore-min.js' type='text/javascript'></script>
-  <script src='./lib/backbone-min.js' type='text/javascript'></script>
-  <script src='./swagger-ui.js' type='text/javascript'></script>
-  <script src='./lib/highlight.7.3.pack.js' type='text/javascript'></script>
-  <script src='./lib/jsoneditor.min.js' type='text/javascript'></script>
-  <script src='./lib/marked.js' type='text/javascript'></script>
-  <script src='./lib/swagger-oauth.js' type='text/javascript'></script>
+  <link rel="icon" type="image/png" href="/swagger-ui/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/swagger-ui/images/favicon-16x16.png" sizes="16x16" />
+  <link href='/swagger-ui/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='/swagger-ui/css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='/swagger-ui/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='/swagger-ui/css/reset.css' media='print' rel='stylesheet' type='text/css'/>
+  <link href='/swagger-ui/css/print.css' media='print' rel='stylesheet' type='text/css'/>
+  <script src='/swagger-ui/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/jquery.slideto.min.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/jquery.wiggle.min.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/handlebars-2.0.0.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/underscore-min.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/backbone-min.js' type='text/javascript'></script>
+  <script src='/swagger-ui/swagger-ui.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/highlight.7.3.pack.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/jsoneditor.min.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/marked.js' type='text/javascript'></script>
+  <script src='/swagger-ui/lib/swagger-oauth.js' type='text/javascript'></script>
 
   <!-- Some basic translations -->
   <!-- <script src='lang/translator.js' type='text/javascript'></script> -->
